<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/appBarCordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimaryContainer">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/top_app_bar"
                app:subtitle="@string/toolbar_subtitle_expand"
                app:subtitleCentered="true"
                app:subtitleTextColor="?attr/colorOnTertiaryContainer"
                app:title="@string/toolbar_title"
                app:titleCentered="true"
                app:titleTextColor="?attr/colorOnPrimaryContainer" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/toolbarMoreActions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDifficultyHeader"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/select_difficulty"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/lnDifficulty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDifficultyHeader">

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/swEasy"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="8dp"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/easy"
                        android:textAlignment="textEnd"
                        android:textColor="?attr/colorOnPrimaryContainer" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/swMedium"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="8dp"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/medium"
                        android:textAlignment="textEnd"
                        android:textColor="?attr/colorOnPrimaryContainer" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/swHard"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="8dp"
                        android:layout_weight="1"
                        android:checked="false"
                        android:text="@string/hard"
                        android:textAlignment="textEnd"
                        android:textColor="?attr/colorOnPrimaryContainer" />
                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvChoiceCharacter"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/select_your_char"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lnDifficulty" />

                <LinearLayout
                    android:id="@+id/lnChoice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvChoiceCharacter">

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/swCross"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginStart="16dp"
                        android:checked="true"
                        android:text="@string/play_as_x"
                        android:textAlignment="textEnd"
                        android:textColor="?attr/colorOnPrimaryContainer" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/swDot"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:checked="false"
                        android:text="@string/play_as_dot"
                        android:textAlignment="textEnd"
                        android:textColor="?attr/colorOnPrimaryContainer" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:background="?attr/colorTertiaryContainer"
                android:columnCount="3"
                android:rowCount="3"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="@id/boxAnnounce"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/casa_0"
                    style="@style/TextAppearance.MaterialComponents.Headline1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginEnd="4dp"

                    android:layout_marginBottom="4dp"
                    android:background="@drawable/shape_play"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/casa_1"
                    style="@style/TextAppearance.MaterialComponents.Headline1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"

                    android:layout_columnWeight="1"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/shape_play"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/casa_2"
                    style="@style/TextAppearance.MaterialComponents.Headline1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"

                    android:layout_columnWeight="1"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/shape_play"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/casa_3"
                    style="@style/TextAppearance.MaterialComponents.Headline1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="4dp"

                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/shape_play"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/casa_4"
                    style="@style/TextAppearance.MaterialComponents.Headline1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="4dp"

                    android:background="@drawable/shape_play"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/casa_5"
                    style="@style/TextAppearance.MaterialComponents.Headline1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"

                    android:layout_marginBottom="4dp"
                    android:background="@drawable/shape_play"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/casa_6"
                    style="@style/TextAppearance.MaterialComponents.Headline1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"

                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/shape_play"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/casa_7"
                    style="@style/TextAppearance.MaterialComponents.Headline1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"

                    android:layout_marginEnd="4dp"
                    android:background="@drawable/shape_play"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/casa_8"
                    style="@style/TextAppearance.MaterialComponents.Headline1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_marginStart="4dp"

                    android:layout_marginTop="4dp"
                    android:background="@drawable/shape_play"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </GridLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/boxAnnounce"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/viewPlaying"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_box"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivPlaying"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/ic_info"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="?attr/colorOnTertiaryContainer" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvPlayingNow"
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/is_your_turn"
                        android:textColor="?attr/colorOnTertiaryContainer"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/ivPlaying"
                        app:layout_constraintStart_toEndOf="@id/ivPlaying"
                        app:layout_constraintTop_toTopOf="@id/ivPlaying" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btPlayOrReset"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:text="@string/init_game"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
